-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b78
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135664 | emb-9 | Dmitriy Samersoff | P3 | Resolved | Fixed | team |
| JDK-8196249 | 8u191 | David Buck | P3 | Resolved | Fixed | b01 |
| JDK-8201055 | 8u181 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8193790 | 8u172 | David Buck | P3 | Resolved | Fixed | b01 |
| JDK-8203088 | emb-8u181 | David Buck | P3 | Resolved | Fixed | master |
Remaining functionality that does not have Diagnostic Commands are:
jmap:
-finalizerinfo
-heap
jmap:
-finalizerinfo
-heap
- backported by
-
JDK-8135664 Implement Diagnostic Commands for heap and finalizerinfo
-
- Resolved
-
-
JDK-8193790 Implement Diagnostic Commands for heap and finalizerinfo
-
- Resolved
-
-
JDK-8196249 Implement Diagnostic Commands for heap and finalizerinfo
-
- Resolved
-
-
JDK-8201055 Implement Diagnostic Commands for heap and finalizerinfo
-
- Resolved
-
-
JDK-8203088 Implement Diagnostic Commands for heap and finalizerinfo
-
- Resolved
-
- blocks
-
JDK-8059035 Break the (implicit) dependency from jdk.jcmd to jdk.hotspot.agent
-
- Closed
-
(1 blocks)