8059036: Implement Diagnostic Commands for heap and finalizerinfo

Implement Diagnostic Commands for heap and finalizerinfo

Reviewed-by: mchung